--- a/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
+++ b/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
@@ -14,9 +14,8 @@
 <br />
 
 <div>
-  <!-- <h4>lastPhotoBundleSize: {{this.psCurrentState.lastPhotoBundleSize}}</h4> -->
-  <h4>totalPhotoNumber: {{totalPhotoNumber}}</h4>
-  <h4>lastBundleSize: {{lastBundleSize}}</h4>
+  <h4>totalPhotoNumber: {{totPhotoNum}}</h4>
+  <h4>lastBundleSize: {{photoBundleSize}}</h4>
   <h4>photoDisplayIndex: {{photoDisplayIndex}}</h4>
   <h4>photoStreamIndex: {{photoStreamIndex}}</h4>
   <h4>mainFramePhotoUrl: {{mainFramePhotoUrl}}</h4>
