pull merge with main dev branch

--- a/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
+++ b/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
@@ -10,6 +10,7 @@
   <p>totalPhotoNumber: {{totPhotoNum}}, lastBundleSize: {{photoBundleSize}}</p>
   <p>photoDisplayIndex: {{photoDisplayIndex}}, photoStreamIndex: {{photoStreamIndex}}</p>
   <p>type: {{mainFramePhotoType}}</p>
+  <p>adoptionUrl: {{adoptionUrl}}</p>
   <img src="{{mainFramePhotoUrl}}">
 </div>
 
