favorite album is working

--- a/Poof-O-Floof-ui/src/app/favorites/favorites.component.html
+++ b/Poof-O-Floof-ui/src/app/favorites/favorites.component.html
@@ -4,4 +4,5 @@
 <p>Current favorite photo here</p>
 <!-- <img src="{{favFramePhotoUrl}}"> -->
 <!-- <img src="{{testPhotoUrl}}"> -->
+<button (click)="subFavorites()">Refresh Favorites</button>
 <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
