Added adoption link to the main photo. Fixed main photo buffer problem. Increased the buffer to 20. Lower the pseudo-random first fetch from 20 to 10 on Tomcat.

--- a/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
+++ b/Poof-O-Floof-ui/src/app/main-photo/main-photo.component.html
@@ -7,11 +7,10 @@
 </button>
 <br />
 <div>
-  <p>totalPhotoNumber: {{totPhotoNum}}, lastBundleSize: {{photoBundleSize}}</p>
-  <p>photoDisplayIndex: {{photoDisplayIndex}}, photoStreamIndex: {{photoStreamIndex}}</p>
-  <p>type: {{mainFramePhotoType}}</p>
-  <p>adoptionUrl: {{adoptionUrl}}</p>
-  <img src="{{mainFramePhotoUrl}}">
+  <h3>totalPhotoNumber: {{totPhotoNum}}, lastBundleSize: {{photoBundleSize}}</h3>
+  <h3>photoDisplayIndex: {{photoDisplayIndex}}, photoStreamIndex: {{photoStreamIndex}}</h3>
+  <h3>type: {{mainFramePhotoType}}</h3>
+  <a href="{{adoptionUrl}}" target="_blank"><img src="{{mainFramePhotoUrl}}" title="Click to adopt me!!!!!"></a>
 </div>
 
 <br />
