--- a/Poof-O-Floof-ui/src/app/app.component.html
+++ b/Poof-O-Floof-ui/src/app/app.component.html
@@ -292,7 +292,7 @@
 
 <h4>User Coordinates: {{userIpLocInfo.coords}}</h4>
 <button (click)="subPhotoUrlProvider()">
-  Update Coordinates
+  Use my Coordinates (Spoofed)!!
 </button>
 
 <!-- <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery> -->
